--- a/CL_NUI.tex
+++ b/CL_NUI.tex
@@ -38,20 +38,21 @@
 %Address
 
 \normalsize\selectfont
-\input{address_UB.txt}
+\input{address_NUI.txt}
 
 \par
 \vspace{15pt}
 
 \large\selectfont
 
-Dear Dr Alexander:
+Dear Dr Goggins:
 \par
 \input{Contents.txt}
 \par
 Sincerely,\\
 Yadong Jiang\\
-PhD Candidate, ROSE Programme\\
-Istituto Universitario di Studi Superiori di Pavia (IUSS), Pavia, Italy
+PhD Candidate, Earthquake Engineering and Engineering Seismology\\
+University School for Advanced Studies IUSS Pavia, Pavia, Italy\\
+University of Pavia, Pavia, Italy
 
 \end{document}
