--- a/CV_NUI.tex
+++ b/CV_NUI.tex
@@ -40,11 +40,11 @@ Phone: & (+351) 910-275-117 & & \\
 \section{Education}
 
 \period{
-    Sep. 2014 $\sim$ Current - Ph.D candidate
+    Sep. 2014 $\sim$ Current - Ph.D candidate, Earthquake Engineering and Engineering Seismology
 }{
-    \textbf{Earthquake Engineering and Engineering Seismology, ROSE Programme}\\
 
-    \textbf{Istituto Universitario di Studi Superiori di Pavia (IUSS), Pavia, Italy}\\
+    \textbf{University School for Advanced Studies IUSS Pavia, Pavia, Italy}\\
+    \textbf{University of Pavia, Pavia, Italy}\\
     
     Thesis: Seismic Assessment of Composite Frames with Concrete-Filled Steel Tube Columns (CFST)\\
     
@@ -65,11 +65,11 @@ Phone: & (+351) 910-275-117 & & \\
 }
 
 \period{
-    Sep. 2012 $\sim$ May. 2014 - Master of Science
+    Sep. 2012 $\sim$ May. 2014 - Master of Science, Earthquake Engineering and Engineering Seismology
 }{
-    \textbf{Earthquake Engineering and Engineering Seismology, ROSE Programme}\\
     
-    \textbf{Istituto Universitario di Studi Superiori di Pavia (IUSS), Pavia, Italy}\\
+    \textbf{University School for Advanced Studies IUSS Pavia, Pavia, Italy}\\
+    \textbf{University of Pavia, Pavia, Italy}\\
     
     Thesis: Experimental and Numerical Behaviour Assessment of Rubberized Concrete Filled Steel Tube\\
     
@@ -83,10 +83,8 @@ Phone: & (+351) 910-275-117 & & \\
 }
 
 \period{
-    Sep. 2008 $\sim$ Jun. 2012 - Bachelor of Engineering
+    Sep. 2008 $\sim$ Jun. 2012 - Bachelor of Engineering, Civil Engineering
 }{
-    \textbf{Civil Engineering}\\
-    
     \textbf{Tongji University, Shanghai, P.R. China}\\
     
     GPA: 4.23 / 5.0 (Five-point grading system)
@@ -223,28 +221,16 @@ Phone: & (+351) 910-275-117 & & \\
 %Publication
 \section{Publications}
 
-\subsection{Journal Papers}
-
-\bitem{
-    A. Silva, Y. Jiang, J.M. Castro, N. Silvestre, and R. Monteiro. Monotonic and cyclic flexural behaviour of square/rectangular rubberized concrete-filled steel tubes. \textit{Journal of Constructional Steel Research},139: 385 - 396, 2017. {\color{blue}\href{https://doi.org/10.1016/j.jcsr.2017.09.006}{DOI: 10.1016/j.jcsr.2017.09.006.}}
-}
-
-\bitem{
-    A. Silva, Y. Jiang, J.M. Castro, N. Silvestre, and R. Monteiro. Experimental assessment of the flexural behaviour of circular rubberized concrete-filled steel tubes. \textit{Journal of Constructional Steel Research}, 122: 557 - 570, 2016. {\color{blue}\href{https://doi.org/10.1016/j.jcsr.2016.04.016}{DOI: 10.1016/j.jcsr.2016.04.016.}}
-}
-
-\bitem{
-    A. Silva, Y. Jiang, L. Macedo, J.M. Castro, R. Monteiro, and N. Silvestre. Seismic performance of composite moment-resisting frames achieved with sustainable cfst members. \textit{Frontiers of Structural and Civil Engineering}, 10(3): 312 - 332, 2016. {\color{blue}\href{https://doi.org/10.1007/s11709-016-0345-y}{DOI: 10.1007/s11709-016-0345-y.}}
-}
-
 \vspace{5pt}
 
-\subsection{Conference Papers}
 
 \bitem{
-    Y. Jiang, A. Silva, J.M. Castro, T.M. Chan and R. Monteiro. Experimental Study and Numerical Assessment of the Flexural behaviour of Square and Rectangular CFST Members under Monotonic and Cyclic Loading. \textit{9th International Conference on Behavior of Steel Structures in Seismic Areas}, Christchurch, New Zealand, 2018.
+    Y. Jiang, A. Silva, J.M. Castro, T.M. Chan and R. Monteiro. Experimental Study and Numerical Assessment of the Flexural behaviour of Square and Rectangular CFST Members under Monotonic and Cyclic Loading. \textit{9th International Conference on Behavior of Steel Structures in Seismic Areas}, Christchurch, New Zealand, 2018.{\color{blue}\href{www.scientific.net/KEM.763.804}{DOI: 10.4028/www.scientific.net/KEM.763.804}}
 }
 
+\bitem{
+	A. Silva, Y. Jiang, J.M. Castro, N. Silvestre, and R. Monteiro. Monotonic and cyclic flexural behaviour of square/rectangular rubberized concrete-filled steel tubes. \textit{Journal of Constructional Steel Research},139: 385 - 396, 2017. {\color{blue}\href{https://doi.org/10.1016/j.jcsr.2017.09.006}{DOI: 10.1016/j.jcsr.2017.09.006.}}
+}
 
 \bitem{
     Y. Jiang, B. Kalemi, A. Silva, J.M. Castro, and R. Monteiro. Numerical modelling of circular CFST members and assessment of multi-axial stress state effects. \textit{ce/papers}, 1 (2 - 3): 2128 - 2137, 2017. {\color{blue}\href{https://doi.org/10.1002/cepa.258}{DOI: 10.1002/ cepa.258.}}
@@ -264,6 +250,14 @@ Y. Jiang, A. Silva, J.M. Castro, R. Monteiro, and N. Silvestre. Experimental and
 
 \bitem{
 A. Silva, Y. Jiang, L. Macedo, J.M. Castro, N. Silvestre, and R. Monteiro. Seismic design of composite moment resisting frames with cfst members. \textit{16th World Conference on Earthquake Engineering}, Santiago, Chile,2017.
+}
+
+\bitem{
+	A. Silva, Y. Jiang, J.M. Castro, N. Silvestre, and R. Monteiro. Experimental assessment of the flexural behaviour of circular rubberized concrete-filled steel tubes. \textit{Journal of Constructional Steel Research}, 122: 557 - 570, 2016. {\color{blue}\href{https://doi.org/10.1016/j.jcsr.2016.04.016}{DOI: 10.1016/j.jcsr.2016.04.016.}}
+}
+
+\bitem{
+	A. Silva, Y. Jiang, L. Macedo, J.M. Castro, R. Monteiro, and N. Silvestre. Seismic performance of composite moment-resisting frames achieved with sustainable cfst members. \textit{Frontiers of Structural and Civil Engineering}, 10(3): 312 - 332, 2016. {\color{blue}\href{https://doi.org/10.1007/s11709-016-0345-y}{DOI: 10.1007/s11709-016-0345-y.}}
 }
 
 \bitem{
